--- a/index.html
+++ b/index.html
@@ -4,15 +4,18 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>JD IT Consulting</title>
-    <meta name="description" content="JD IT Consulting unterstützt Sie und Ihr Unternehmen im Bereich der Digitalisierung und künstlicher Intelligenz."/> 
+    <title>AI for everyone</title>
+    <meta
+      name="description"
+      content="JD IT Consulting unterstützt Sie und Ihr Unternehmen im Bereich der Digitalisierung und künstlicher Intelligenz."
+    />
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
     <noscript
-    >Du musst das ausführen von Javascript erlauben, damit du den Inhalt
-    dieser Seite sehen kannst.</noscript
-  >
+      >Du musst das ausführen von Javascript erlauben, damit du den Inhalt
+      dieser Seite sehen kannst.</noscript
+    >
   </body>
 </html>
