--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AI for everyone</title>
+    <title>Ai for everyone</title>
     <meta
       name="description"
-      content="JD IT Consulting unterstützt Sie und Ihr Unternehmen im Bereich der Digitalisierung und künstlicher Intelligenz."
+      content="Ai for everyone unterstützt Sie und Ihr Unternehmen im Bereich der künstlichen Intelligenz."
     />
   </head>
   <body>
