--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ai for everyone</title>
+    <title>Erik Quint</title>
     <meta
       name="description"
       content="Ai for everyone unterstützt Sie und Ihr Unternehmen im Bereich der künstlichen Intelligenz."
