Lk - updated index.html

--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Erik Quint</title>
+    <title>Create Your Path: Klarheit und Selbstentfaltung in 12 Wochen</title>
     <meta
       name="description"
-      content="Ai for everyone unterstützt Sie und Ihr Unternehmen im Bereich der künstlichen Intelligenz."
+      content="Entdecke deine Stärken & Werte mit wissenschaftlichen Methoden. Erschaffe eine inspirierende Vision und ersetze hinderliche Denkmuster für dein Wachstum."
     />
   </head>
   <body>
