--- a/index.html
+++ b/index.html
@@ -2,12 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/logo.png" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Create Your Path: Klarheit und Selbstentfaltung in 12 Wochen</title>
     <meta
       name="description"
       content="Entdecke deine Stärken & Werte mit wissenschaftlichen Methoden. Erschaffe eine inspirierende Vision und ersetze hinderliche Denkmuster für dein Wachstum."
+    />
+    <meta
+      property="og:image"
+      content="https://erikquint.de/erikquint_logo.png"
     />
   </head>
   <body>
